WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232060
WebContent crash when sending invalid IPC message using IPC testing API
https://bugs.webkit.org/show_bug.cgi?id=232060
Summary
WebContent crash when sending invalid IPC message using IPC testing API
Brandon
Reported
2021-10-20 17:25:42 PDT
When sending an invalid message using the IPC testing API, the WebContent process will crash. IPC.sendSyncMessage('UI',IPC.webPageProxyID,IPC.messages.WebPageProxy_ExecuteSavedCommandBySelector.name, 1, [{type: 'String',value: 'AAA'}]);
Attachments
Patch
(2.48 KB, patch)
2021-10-20 17:27 PDT
,
Brandon
no flags
Details
Formatted Diff
Diff
Patch
(4.19 KB, patch)
2021-10-20 17:45 PDT
,
Brandon
wenson_hsieh
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.88 KB, patch)
2021-10-22 17:30 PDT
,
Brandon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Brandon
Comment 1
2021-10-20 17:27:41 PDT
Created
attachment 441965
[details]
Patch
Brandon
Comment 2
2021-10-20 17:28:45 PDT
<
rdar://70334824
>
Brandon
Comment 3
2021-10-20 17:45:29 PDT
Created
attachment 441967
[details]
Patch
Wenson Hsieh
Comment 4
2021-10-20 17:47:54 PDT
Comment on
attachment 441967
[details]
Patch r=mews
Brandon
Comment 5
2021-10-22 17:30:48 PDT
Created
attachment 442228
[details]
Patch
EWS
Comment 6
2021-10-23 13:18:54 PDT
Committed
r284746
(
243455@main
): <
https://commits.webkit.org/243455@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442228
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug