WebContent crash when sending invalid IPC message using IPC testing API https://bugs.webkit.org/show_bug.cgi?id=232060

Patch by Brandon Stewart <brandonstewart@apple.com> on 2021-10-23
Reviewed by Wenson Hsieh.

Source/WebKit:

Do not trigger a crash in WebContent Process when sending an invalid IPC message using the
IPC testing API.

Test: ipc/send-invalid-message.html

* Platform/IPC/Connection.cpp:
(IPC::Connection::dispatchSyncMessage):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeConnection):

LayoutTests:

Add IPC test to verify that an invalid IPC message will not cause a crash in WebContent Process
when using the IPC testing API.

* TestExpectations:
* ipc/send-invalid-message-expected.txt: Added.
* ipc/send-invalid-message.html: Added.

Canonical link: https://commits.webkit.org/243455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284746 268f45cc-cd09-0410-ab3c-d52691b4dbfc